--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,5 +1,5 @@
 # Uncomment the following line to turn on logging, and set ZMK logging to debug output
-#CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_I2C=y
 
@@ -8,7 +8,7 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Enable nice!view
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 # Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 # Disable OLED
@@ -19,4 +19,4 @@ CONFIG_SSD1306=n
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
 
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_USB=y
