--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,6 +1,8 @@
-# Uncomment the following line to turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
-
+# Enable USB HID and disable BLE and USB logging for testing
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_HID=y
+CONFIG_ZMK_BLE=n
+CONFIG_ZMK_USB_LOGGING=n
 CONFIG_I2C=y
 
 # Uncomment to enable encoder
@@ -18,5 +20,3 @@ CONFIG_SSD1306=n
 #CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
-
-CONFIG_ZMK_USB=y
