--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -2,6 +2,8 @@
 #CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_I2C=y
+CONFIG_ZMK_DEBUG=y
+CONFIG_ZMK_KSCAN_DEBUG=y
 
 # Uncomment to enable encoder
 CONFIG_EC11=y
@@ -19,4 +21,4 @@ CONFIG_SSD1306=n
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
 
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_USB=y
