--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -9,9 +9,9 @@ CONFIG_LOG_DEFAULT_LEVEL=4  # 4 = debug
 # Enable USB logging output (optional but useful)
 CONFIG_ZMK_USB_LOGGING=y
 
-# Set ZMK component log levels
-CONFIG_ZMK_KSCAN_LOG_LEVEL=4
-CONFIG_ZMK_LOG_LEVEL=4
+# Removed: per-module log levels (these cause errors if set here)
+# CONFIG_ZMK_KSCAN_LOG_LEVEL=4
+# CONFIG_ZMK_LOG_LEVEL=4
 
 # Uncomment to enable encoder
 CONFIG_EC11=y
