--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -4,7 +4,7 @@
 CONFIG_I2C=y
 # Enable logging
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4  # 4 = debug
+CONFIG_LOG_DEFAULT_LEVEL=4 
 
 # Enable USB logging output (optional but useful)
 CONFIG_ZMK_USB_LOGGING=y
