--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -5,7 +5,7 @@ CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4 
 
 # Enable USB logging output (optional but useful)
-CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_USB_LOGGING=y
 
 # Removed: per-module log levels (these cause errors if set here)
 # CONFIG_ZMK_KSCAN_LOG_LEVEL=4
