--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,30 +1,23 @@
-
 CONFIG_I2C=y
-# Enable logging
+
+# Enable general logging
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4 
+CONFIG_LOG_DEFAULT_LEVEL=4   # Debug level
 
-# Enable USB logging output (optional but useful)
-# CONFIG_ZMK_USB_LOGGING=y
+# Enable USB and USB logging for debug output
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_LOGGING=y       # Sends logs to USB CDC
 
-# Removed: per-module log levels (these cause errors if set here)
-# CONFIG_ZMK_KSCAN_LOG_LEVEL=4
-# CONFIG_ZMK_LOG_LEVEL=4
+# Module-specific logging
+CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y   # KSCAN module debug messages
+# You can leave CONFIG_ZMK_LOG_LEVEL_DBG unset to avoid conflicts
 
-# Uncomment to enable encoder
+# Enable encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Enable nice!view
+# Display (optional)
 CONFIG_ZMK_DISPLAY=y
-# Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-# Disable OLED
 CONFIG_SSD1306=n
-
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
-
-CONFIG_ZMK_USB=y
