--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,23 +1,16 @@
 CONFIG_I2C=y
-
-# Enable general logging
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4   # Debug level
+CONFIG_LOG_DEFAULT_LEVEL=4
 
-# Enable USB and USB logging for debug output
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y       # Sends logs to USB CDC
+CONFIG_ZMK_USB_LOGGING=y   # Enable USB debug output
 
-# Module-specific logging
-CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y   # KSCAN module debug messages
-# You can leave CONFIG_ZMK_LOG_LEVEL_DBG unset to avoid conflicts
+# Module-specific log levels removed
+# CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y
 
 # Enable encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Display (optional)
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-CONFIG_SSD1306=n
-CONFIG_NICE_VIEW_WIDGET_INVERTED=y
+CONFIG_ZMK_
