--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -3,7 +3,7 @@ CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y   # Enable USB debug output
+CONFIG_ZMK_USB_LOGGING=y 
 
 # Module-specific log levels removed
 # CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y
