--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,16 +1,19 @@
 CONFIG_I2C=y
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_LOG_DEFAULT_LEVEL=4   # Debug level
 
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y 
+CONFIG_ZMK_USB_LOGGING=y     # Enable USB log output
 
-# Module-specific log levels removed
+# Module-specific log levels removed to avoid build errors
 # CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y
 
 # Enable encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Display (optional)
-CONFIG_ZMK_
+# Optional: display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+CONFIG_SSD1306=n
+CONFIG_NICE_VIEW_WIDGET_INVERTED=y
