--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,9 +1,9 @@
 CONFIG_I2C=y
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4   # Debug level
+CONFIG_LOG_DEFAULT_LEVEL=4 
 
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y     # Enable USB log output
+CONFIG_ZMK_USB_LOGGING=y  
 
 # Module-specific log levels removed to avoid build errors
 # CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y
