--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -2,6 +2,15 @@ CONFIG_I2C=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4 
 
+# Required for USB logging
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
+CONFIG_USB_CDC_ACM=y
+
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_USB_LOGGING=y  
 
