--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,8 +1,11 @@
-CONFIG_I2C=y
+# Logging
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4 
+CONFIG_LOG_DEFAULT_LEVEL=4
 
-# Required for USB logging
+# I2C (optional for your keyboard)
+CONFIG_I2C=y
+
+# Serial / Console / USB dependencies
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
@@ -11,17 +14,18 @@ CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
 CONFIG_USB_CDC_ACM=y
 
+# ZMK USB logging
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y  
+CONFIG_ZMK_USB_LOGGING=y
 
-# Module-specific log levels removed to avoid build errors
-# CONFIG_ZMK_KSCAN_LOG_LEVEL_DBG=y
+# Key scanning (kscan)
+CONFIG_ZMK_KSCAN=y
 
-# Enable encoder
+# Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Optional: display
+# Display (optional)
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_SSD1306=n
