--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -6,13 +6,16 @@ CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_I2C=y
 
 # Serial / Console / USB dependencies
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
-CONFIG_USB_CDC_ACM=y
+
+# ZMK logging over UART
+CONFIG_ZMK_LOG_LEVEL_DBG=y
+CONFIG_ZMK_LOG=y
 
 # ZMK USB logging
 CONFIG_ZMK_USB=y
