--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,21 +1,5 @@
-# Logging
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4
-
 # I2C (optional for your keyboard)
 CONFIG_I2C=y
-
-# Serial / Console / USB dependencies
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4
-CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
-
-# ZMK logging over UART
-CONFIG_ZMK_LOG_LEVEL_DBG=y
-CONFIG_ZMK_LOG=y
 
 # ZMK USB logging
 CONFIG_ZMK_USB=y
@@ -33,3 +17,12 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_SSD1306=n
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
+
+# Serial / Console / USB dependencies required for USB logging
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
+CONFIG_USB_CDC_ACM=y
