--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,11 +1,22 @@
 # I2C (optional for your keyboard)
 CONFIG_I2C=y
 
+# USB device support
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_CDC_ACM=y
+CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
+
 # ZMK USB logging
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_USB_LOGGING=y
 
-# Key scanning (kscan)
+# Serial / console support required for USB logging
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+
+# Key scanning
 CONFIG_ZMK_KSCAN=y
 
 # Encoder
@@ -17,12 +28,3 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_SSD1306=n
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
-
-# Serial / Console / USB dependencies required for USB logging
-CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
-CONFIG_USB_CDC_ACM=y
