--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,10 +1,10 @@
-# I2C (optional for your keyboard)
+# I2C (optional, for MCP23017)
 CONFIG_I2C=y
 
 # USB device support
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_CDC_ACM=y
-CONFIG_USB_DEVICE_PRODUCT="ZMK Keyboard"
+CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
 
 # ZMK USB logging
 CONFIG_ZMK_USB=y
@@ -22,9 +22,3 @@ CONFIG_ZMK_KSCAN=y
 # Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# Display (optional)
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-CONFIG_SSD1306=n
-CONFIG_NICE_VIEW_WIDGET_INVERTED=y
