--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -4,7 +4,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix-transform = &default_transform;
-        zephyr,display = &nice_view;
+        /* zephyr,display = &nice_view;  <-- remove/comment out */
     };
 
     kscan0: kscan_composite {
