--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,22 +1,12 @@
-# I2C (optional, for MCP23017)
-CONFIG_I2C=y
-
-# USB device support
+# Enable USB device support
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_CDC_ACM=y
-CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
-
-# ZMK USB logging
 CONFIG_ZMK_USB=y
 
-# Serial / console support required for USB logging
-CONFIG_SERIAL=y
+# Enable USB logging for debugging
+CONFIG_ZMK_USB_LOGGING=y
+
+# Serial / console support needed for logging
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
-
-# Key scanning
-CONFIG_ZMK_KSCAN=y
-
-# Encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_SERIAL=y
