--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,12 +1,11 @@
-# Enable USB device support
+# USB device support
 CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_CDC_ACM=y
-CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
 
-# Enable USB logging for debugging
-CONFIG_ZMK_USB_LOGGING=y
-
-# Serial / console support needed for logging
+# Enable USB console for debug output
 CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
 CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=y
+
+# Key scanning
+CONFIG_ZMK_KSCAN=y
