--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -10,12 +10,9 @@ CONFIG_UART_CONSOLE=y
 # Key scanning
 CONFIG_ZMK_KSCAN=y
 
-# Enable kscan debug output
-CONFIG_KSCAN_LOG=y
+# Enable logging
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 
 # Key debounce configuration
-CONFIG_ZMK_KSCAN_DEBOUNCE_DELAY_MS=20
-
-CONFIG_ZMK_LOG_KSCAN_MATRIX=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_INTERVAL_MS=20
