--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,15 +1,14 @@
-# USB device support
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
-
-# Enable USB console for debug output
+# USB console
 CONFIG_CONSOLE=y
 CONFIG_SERIAL=y
 CONFIG_UART_CONSOLE=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
 
 # Key scanning
 CONFIG_ZMK_KSCAN=y
-
-# Enable logging
+CONFIG_KSCAN_LOG=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_ZMK_KSCAN_DEBOUNCE_DELAY_MS=20
+CONFIG_ZMK_LOG_KSCAN_MATRIX=y
