--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -28,11 +28,12 @@
     kscan3: kscan_sp3t_toggle {
         compatible = "zmk,kscan-gpio-direct";
         toggle-mode;
+        row-offset = <11>;       /* <-- added */
 
         input-gpios
-        = <&ext2 12 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
-        , <&ext2 4 GPIO_ACTIVE_LOW>
-        ;
+            = <&ext2 12 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+            , <&ext2 4 GPIO_ACTIVE_LOW>
+            ;
     };
 
     kscan2: kscan_direct {
