encoder disabled in config

--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -5,6 +5,9 @@ CONFIG_UART_CONSOLE=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
 
+#disable encoder
+CONFIG_ZMK_ENCODERS=n
+
 # Key scanning
 CONFIG_ZMK_KSCAN=y
 CONFIG_LOG=y
