--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -82,7 +82,7 @@
         a-gpios = <&ext2 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&ext2 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <80>;
-        status = "okay";
+        status = "disabled";
     };
 
     default_transform: matrix_transform {
