--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -77,14 +77,16 @@
 
     };
 
+    /*
     digital_crown: encoder {
         compatible = "alps,ec11";
         a-gpios = <&ext2 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&ext2 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <80>;
-        status = "disabled";
+        status = "okay";
     };
-
+    */
+`
     default_transform: matrix_transform {
         compatible = "zmk,matrix-transform";
         rows = <6>;
