--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,12 +1,13 @@
-# USB console
 CONFIG_CONSOLE=y
 CONFIG_SERIAL=y
-CONFIG_UART_CONSOLE=y
 CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="ADB Keyboard"
+CONFIG_USB_CDC_ACM=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_CONSOLE_ON_DEV_NAME="CDC_ACM_0"
 
-
-# Key scanning
-CONFIG_ZMK_KSCAN=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=4
+
+CONFIG_ZMK_KSCAN_DEBUG=y
+
