--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -51,12 +51,12 @@
 
     kscan1: kscan_matrix {
         compatible = "zmk,kscan-gpio-matrix";
-        diode-direction = "row2col";
+        diode-direction = "col2row";
         col-gpios
-            = <&ext1 6 GPIO_ACTIVE_LOW>
+            = <&ext1 3 GPIO_ACTIVE_LOW>
+            , <&ext1 6 GPIO_ACTIVE_LOW>
             , <&ext1 5 GPIO_ACTIVE_LOW>
             , <&ext1 4 GPIO_ACTIVE_LOW>
-            , <&ext1 3 GPIO_ACTIVE_LOW>
             , <&ext1 2 GPIO_ACTIVE_LOW>
             , <&ext1 1 GPIO_ACTIVE_LOW>
             , <&ext1 0 GPIO_ACTIVE_LOW>
