--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -4,11 +4,11 @@
 CONFIG_I2C=y
 
 # Uncomment to enable encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
 # Enable nice!view
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 # Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 # Disable OLED
@@ -19,4 +19,4 @@ CONFIG_SSD1306=n
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=y
 
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_USB=y
