--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -19,5 +19,12 @@ CONFIG_SSD1306=n
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
+
+# Required dependencies
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_USB_LOGGING=y
