--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -20,11 +20,10 @@ CONFIG_SSD1306=n
 CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
 
-# Required dependencies
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
+# other way
+CONFIG_PRINTK=y
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=3
 
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_USB_LOGGING=y
+
