--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -21,3 +21,13 @@ CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
 CONFIG_ZMK_USB=y
 
+#debugging
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_LOGGING=y
+CONFIG_ZMK_BLE_LOG_LEVEL_DBG=y
+CONFIG_LOG_PROCESS_THREAD=y
+CONFIG_LOG_BUFFER_SIZE=2048
+CONFIG_LOG=y
+CONFIG_ZMK_KSCAN_DEBUG=y
+
+
