--- a/boards/shields/adbk/adbk.dtsi
+++ b/boards/shields/adbk/adbk.dtsi
@@ -4,6 +4,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix-transform = &default_transform;
+        zephyr,bt-hci = &bt;
         /* zephyr,display = &nice_view; */
     };
 
@@ -100,5 +101,8 @@
         RC(10,4)
         >;
     };
+};
 
+&bt {
+    status = "okay";
 };
