--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -21,7 +21,23 @@ CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
 CONFIG_ZMK_USB=y
 
-#debugging
+# Enable Bluetooth stack
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="MyZMKKeyboard"
+
+# HID over GATT
+CONFIG_BT_HID_PERIPHERAL=y
+CONFIG_BT_HID_PROFILE=y
+
+# Security & bonding
+CONFIG_BT_SMP=y
+CONFIG_BT_BONDABLE=y
+CONFIG_BT_SETTINGS=y
+CONFIG_SETTINGS=y
+
+# Enable ZMK BLE
+CONFIG_ZMK_BLE=y
 
 
 
