--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -24,11 +24,7 @@ CONFIG_ZMK_USB=y
 # Enable Bluetooth stack
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="MyZMKKeyboard"
-
-# HID over GATT
-CONFIG_BT_HID_PERIPHERAL=y
-CONFIG_BT_HID_PROFILE=y
+CONFIG_BT_DEVICE_NAME="Modern Macintosh"
 
 # Security & bonding
 CONFIG_BT_SMP=y
