--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -24,7 +24,7 @@ CONFIG_ZMK_USB=y
 # Enable Bluetooth stack
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="Modern Macintosh"
+CONFIG_BT_DEVICE_NAME="Modern Mac"
 
 # Security & bonding
 CONFIG_BT_SMP=y
