--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,30 +1,26 @@
-# Uncomment the following line to turn on logging, and set ZMK logging to debug output
-#CONFIG_ZMK_USB_LOGGING=y
-
+# I2C (needed for peripherals if used)
 CONFIG_I2C=y
 
-# Uncomment to enable encoder
+# Encoder disabled
 CONFIG_EC11=n
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
-# Enable nice!view
+# Display disabled
 CONFIG_ZMK_DISPLAY=n
-# Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-# Disable OLED
 CONFIG_SSD1306=n
-
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
-CONFIG_ZMK_USB=y
+# USB disabled (we are focusing on battery + BLE)
+CONFIG_ZMK_USB=n
 
-# Enable Bluetooth stack
+# Bluetooth stack
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="Modern Mac"
+CONFIG_ZMK_BLE=y
+
+# Device name (keep <= 12 chars for Zephyr)
+CONFIG_BT_DEVICE_NAME="ZMK_Keyboard"
 
 # Security & bonding
 CONFIG_BT_SMP=y
@@ -32,8 +28,9 @@ CONFIG_BT_BONDABLE=y
 CONFIG_BT_SETTINGS=y
 CONFIG_SETTINGS=y
 
-# Enable ZMK BLE
-CONFIG_ZMK_BLE=y
+# Power management
+# Disable deep sleep at boot so BLE advertises immediately
+CONFIG_SYS_POWER_MANAGEMENT=n
 
-
-
+# Optional: reduce CPU frequency scaling if you want some low-power operation
+# CONFIG_CPU_HAS_LOW_POWER_MODES=y
