--- a/boards/shields/adbk/adbk.conf
+++ b/boards/shields/adbk/adbk.conf
@@ -1,36 +1,23 @@
-# I2C (needed for peripherals if used)
 CONFIG_I2C=y
 
-# Encoder disabled
 CONFIG_EC11=n
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
-# Display disabled
 CONFIG_ZMK_DISPLAY=n
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_SSD1306=n
 CONFIG_NICE_VIEW_WIDGET_INVERTED=n
 
-# USB disabled (we are focusing on battery + BLE)
 CONFIG_ZMK_USB=n
 
-# Bluetooth stack
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_ZMK_BLE=y
-
-# Device name (keep <= 12 chars for Zephyr)
 CONFIG_BT_DEVICE_NAME="ZMK_Keyboard"
-
-# Security & bonding
 CONFIG_BT_SMP=y
 CONFIG_BT_BONDABLE=y
 CONFIG_BT_SETTINGS=y
 CONFIG_SETTINGS=y
 
-# Power management
-# Disable deep sleep at boot so BLE advertises immediately
-CONFIG_SYS_POWER_MANAGEMENT=n
-
-# Optional: reduce CPU frequency scaling if you want some low-power operation
-# CONFIG_CPU_HAS_LOW_POWER_MODES=y
+# Disable sleep at startup so BLE advertises immediately
+CONFIG_ZMK_SLEEP=n
